Some styling bits.

--- a/onlinestore.html
+++ b/onlinestore.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    <div class="top-bar">
+        <img></img>
+    </div>
     <div class="shopping-cart">
         <table class="table">
             <tr>
@@ -49,6 +52,9 @@
                 <td><input type="checkbox" data-d-checkbox></td>
             </tr>
         </table>
+    </div>
+    <div>
+        <button data-update-basket>Update basket</button>
     </div>
     <div class="shopping-cart-total">
         <h2>Total:<span data-total> </span></h2>
